fix: dark mode colors

--- a/src/app/(payload)/custom.scss
+++ b/src/app/(payload)/custom.scss
@@ -78,14 +78,15 @@
 
   --popover: 222.2 84% 4.9%;
   --popover-foreground: 210 40% 98%;
-  /* #4a6684 */
-  --primary: 211 19% 43%;
+  /* #213b59*/
+  --primary: 212 46% 24%;
 
   --primary-foreground: 0.93 0.0584 251.06;
   /* #8a4f01 */
   --secondary: 34 99% 27%;
   --secondary-foreground: 210 40% 98%;
-  --tertiary: 85 5% 52%;
+  /* #3C3F39 */
+  --tertiary: 90 5% 24%;
 
   --muted: 217.2 32.6% 17.5%;
   --muted-foreground: 215 20.2% 65.1%;
